# CompositeBuilderExample

./: .cproject  .gitignore  .gitmodules  .project  CompositeBuilderExample.ioc  CompositeBuilderExample.txt  LICENSE  README.md  test_itf_1_echo.py  test_itf_echo.py
Core/Inc/: stm32g4xx_it.h  stm32l4xx_hal_conf.h
Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32g4xx_it.c
Doc/: DescriptorDump_RAFI_Glasscape_Touch ONLY Interface 0.txt  DescriptorDump_RAFI_Glasscape_Touch ONLY Interface 1.txt  DescriptorDump_RAFI_Glasscape_Touch STM32F373 EXPECTED.txt  DescriptorDump_RAFI_Glasscape_Touch STM32G474 CURRENT.txt  Report Descriptor STM32F373 RAW.txt  Report Descriptor STM32G474 0 MultiTouch.txt  Report Descriptor STM32G474 1 Vendor.txt  Report Descriptor STM32G474 RAW.txt  USB Descriptor and Request Parser.htm
DumpReports/: CMakeLists.txt  DumpReports.cpp  stm32g4xx.h
USB_DEVICE/App/: LibConfig.h  usb_device.c  usbd_custom_hid_if.c  usbd_custom_hid_if.h  usbd_custom_hid_if_0.c  usbd_custom_hid_if_0.h  usbd_custom_hid_if_1.c  usbd_custom_hid_if_1.h  usbd_desc.c  usbd_desc.h
